crates/kply-cli/tests/snapshots/cli__app_list_invalid_config.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 554
expression: stderr
---
kply error: config validation

apps[0].namespace: field is required
