crates/kply-cli/tests/snapshots/cli__app_list_invalid_config_json.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 591
expression: value
---
{
  "errors": [
    "apps[0].namespace: field is required"
  ],
  "status": "invalid"
}
