crates/kply-cli/tests/snapshots/cli__check_run_invalid_session_id.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 1548
expression: normalize_output(&stderr)
---
kply error: check run

session id must start and end with a lowercase ASCII letter or digit
