crates/kply-cli/tests/snapshots/cli__check_run_missing_kubeconfig.snap
---
source: crates/kply-cli/tests/cli.rs
assertion_line: 1277
expression: normalize_output(&stderr)
---
kply error: missing_kubeconfig

kubeconfig could not be read at the configured path; set KUBECONFIG or create ~/.kube/config
