crates/kply-cli/tests/snapshots/cli__cluster_info_kubeconfig_error.snap
---
source: crates/kply-cli/tests/cli.rs
expression: normalize_output(&stderr)
---
kply error: missing_kubeconfig

kubeconfig could not be read at <kubeconfig-path>; set KUBECONFIG or create ~/.kube/config
