crates/kply-cli/tests/snapshots/cli__cluster_info_kubeconfig_json_error.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "error": {
    "code": "missing_kubeconfig",
    "exit_code": 2,
    "message": "kubeconfig could not be read at <kubeconfig-path>; set KUBECONFIG or create ~/.kube/config"
  }
}
