crates/kply-cli/tests/snapshots/cli__command_group_app.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
kply app
Command group is defined but behavior is intentionally pending.
