crates/kply-cli/tests/snapshots/cli__command_group_app_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "command": "app",
  "status": "placeholder"
}
